--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 
 [dev-dependencies]
-mollusk-svm = "0.4.1"
-solana-sdk = "2.3.1"
+mollusk-svm = "0.5.1"
+solana-instruction = "2.3.0"
+solana-pubkey = "2.3.0"
+solana-program-error = "2.2.2"
